// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Components/VehicleResults/Body NoViolations smoke-test 1`] = `
<div class="container-fluid">
  <div class="row">
    <div class="col-md-12">
      <div class="vehicles">
        <div class="vehicle card">
          <ul class="list-group list-group-flush">
            <li class="list-group-item no-padding">
              <div class="row">
                <div class="summary-section col-xs-12 col-sm-6">
                  <div class="summary-box keys lookup-info">
                    <div>
                      Plate:
                    </div>
                    <div>
                      State:
                    </div>
                    <div>
                      Plate type:
                    </div>
                    <div>
                      Violations:
                    </div>
                    <div>
                      Lookups:
                    </div>
                  </div>
                  <div class="summary-box values lookup-info">
                    <div class="summary-value">
                      ABC1234
                    </div>
                    <div class="summary-value region">
                      <div class="region-abbreviation">
                        NY
                      </div>
                      <div class="region-full-name">
                        New York
                      </div>
                    </div>
                    <div class="summary-value">
                      All
                    </div>
                    <div class="summary-value">
                      0
                    </div>
                    <div class="summary-value">
                      2
                    </div>
                  </div>
                </div>
              </div>
            </li>
            <li class="list-group-item">
              <div class="violations-table-wrapper"
                   style="width: 100%;"
              >
                <div class="violations-table-header"
                     data-testid="vehicle-violations-controls"
                >
                  <div class="row">
                    <div class="d-grid gap-2 ">
                      <button aria-controls="violations-table-e5f6g7h8"
                              aria-expanded="false"
                              class="btn btn-block w-100 btn-outline-secondary"
                              disabled
                              type="button"
                      >
                        no violations
                      </button>
                    </div>
                  </div>
                </div>
              </div>
            </li>
          </ul>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Components/VehicleResults/Body ViolationsListHidden smoke-test 1`] = `
<div class="container-fluid">
  <div class="row">
    <div class="col-md-12">
      <div class="vehicles">
        <div class="vehicle card">
          <ul class="list-group list-group-flush">
            <li class="list-group-item no-padding">
              <div class="row">
                <div class="summary-section col-xs-12 col-sm-6">
                  <div class="summary-box keys lookup-info">
                    <div>
                      Plate:
                    </div>
                    <div>
                      State:
                    </div>
                    <div>
                      Plate type:
                    </div>
                    <div>
                      Violations:
                    </div>
                    <div>
                      Lookups:
                    </div>
                  </div>
                  <div class="summary-box values lookup-info">
                    <div class="summary-value">
                      ABC1234
                    </div>
                    <div class="summary-value region">
                      <div class="region-abbreviation">
                        NY
                      </div>
                      <div class="region-full-name">
                        New York
                      </div>
                    </div>
                    <div class="summary-value">
                      All
                    </div>
                    <div class="summary-value">
                      3
                    </div>
                    <div class="summary-value">
                      2
                    </div>
                  </div>
                </div>
                <div class="summary-section col-xs-12 col-sm-6">
                  <div class="summary-box keys">
                    <div>
                      Fined:
                    </div>
                    <div>
                      Reduced:
                    </div>
                    <div class="fines-reduced">
                      Paid:
                    </div>
                    <div>
                      Owed:
                    </div>
                  </div>
                  <div class="summary-box values fines"
                       role="math"
                       aria-label="$3,850.00 fined - $3,780.00 paid - $20.00 reduced = $50.00 outstanding"
                  >
                    <div class="math-symbols">
                      <div>
                        &nbsp;&nbsp;&nbsp;
                      </div>
                      <div>
                        &nbsp;&nbsp;&nbsp;
                      </div>
                      <div class="fines-reduced">
                        –&nbsp;
                      </div>
                      <div>
                        &nbsp;&nbsp;&nbsp;
                      </div>
                    </div>
                    <div class="amounts">
                      <div>
                        $3,850.00
                      </div>
                      <div>
                        $20.00
                      </div>
                      <div class="fines-reduced">
                        $3,780.00
                      </div>
                      <div>
                        $50.00
                      </div>
                    </div>
                  </div>
                </div>
              </div>
            </li>
            <li class="list-group-item">
              <div class="violations-table-wrapper"
                   style="width: 100%;"
              >
                <div class="violations-table-header"
                     data-testid="vehicle-violations-controls"
                >
                  <div class="row">
                    <div class="d-grid gap-2 ">
                      <button aria-controls="violations-table-e5f6g7h8"
                              aria-expanded="false"
                              class="btn btn-block w-100 btn-outline-primary"
                              type="button"
                      >
                        show 3 violations
                      </button>
                    </div>
                  </div>
                </div>
              </div>
            </li>
          </ul>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Components/VehicleResults/Body ViolationsListHiddenWithDangerousVehicleAbatementAct smoke-test 1`] = `
<div class="container-fluid">
  <div class="row">
    <div class="col-md-12">
      <div class="vehicles">
        <div class="vehicle card">
          <ul class="list-group list-group-flush">
            <li class="list-group-item no-padding">
              <div class="row">
                <div class="summary-section col-xs-12 col-sm-6">
                  <div class="summary-box keys lookup-info">
                    <div>
                      Plate:
                    </div>
                    <div>
                      State:
                    </div>
                    <div>
                      Plate type:
                    </div>
                    <div>
                      Violations:
                    </div>
                    <div>
                      Lookups:
                    </div>
                  </div>
                  <div class="summary-box values lookup-info">
                    <div class="summary-value">
                      ABC1234
                    </div>
                    <div class="summary-value region">
                      <div class="region-abbreviation">
                        NY
                      </div>
                      <div class="region-full-name">
                        New York
                      </div>
                    </div>
                    <div class="summary-value">
                      All
                    </div>
                    <div class="summary-value">
                      3
                    </div>
                    <div class="summary-value">
                      2
                    </div>
                  </div>
                </div>
                <div class="summary-section col-xs-12 col-sm-6">
                  <div class="summary-box keys">
                    <div>
                      Fined:
                    </div>
                    <div>
                      Reduced:
                    </div>
                    <div class="fines-reduced">
                      Paid:
                    </div>
                    <div>
                      Owed:
                    </div>
                  </div>
                  <div class="summary-box values fines"
                       role="math"
                       aria-label="$3,850.00 fined - $3,780.00 paid - $20.00 reduced = $50.00 outstanding"
                  >
                    <div class="math-symbols">
                      <div>
                        &nbsp;&nbsp;&nbsp;
                      </div>
                      <div>
                        &nbsp;&nbsp;&nbsp;
                      </div>
                      <div class="fines-reduced">
                        –&nbsp;
                      </div>
                      <div>
                        &nbsp;&nbsp;&nbsp;
                      </div>
                    </div>
                    <div class="amounts">
                      <div>
                        $3,850.00
                      </div>
                      <div>
                        $20.00
                      </div>
                      <div class="fines-reduced">
                        $3,780.00
                      </div>
                      <div>
                        $50.00
                      </div>
                    </div>
                  </div>
                </div>
              </div>
            </li>
            <li class="list-group-item list-group-item-warning"
                data-testid="dangerous-vehicle-abatement-act-notice"
            >
              <p>
                Under the
                <a target="_blank"
                   rel="noopener noreferrer"
                   href="https://legistar.council.nyc.gov/LegislationDetail.aspx?ID=3521908&amp;GUID=A4FD4CFC-8AD8-4130-AA92-11BC56936F6D#:~:text=The%20bill%20will%20create%20a,Department%20of%20Transportation%20(DOT)."
                >
                  Dangerous Vehicle Abatement Act
                </a>
                &nbsp;this vehicle could have been booted or impounded for:
              </p>
              <ul>
                <li>
                  <span class="text-bg-warning">
                    <span class="dvaa-violations-count">
                      7
                    </span>
                    red light camera violations
                  </span>
                  <span>
                    &nbsp;(&gt;= 5/year) from 06/27/2023 to 05/06/2024
                  </span>
                </li>
              </ul>
            </li>
            <li class="list-group-item">
              <div class="violations-table-wrapper"
                   style="width: 100%;"
              >
                <div class="violations-table-header"
                     data-testid="vehicle-violations-controls"
                >
                  <div class="row">
                    <div class="d-grid gap-2 ">
                      <button aria-controls="violations-table-e5f6g7h8"
                              aria-expanded="false"
                              class="btn btn-block w-100 btn-outline-primary"
                              type="button"
                      >
                        show 3 violations
                      </button>
                    </div>
                  </div>
                </div>
              </div>
            </li>
          </ul>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Components/VehicleResults/Body ViolationsListVisible smoke-test 1`] = `
<div class="container-fluid">
  <div class="row">
    <div class="col-md-12">
      <div class="vehicles">
        <div class="vehicle card">
          <ul class="list-group list-group-flush">
            <li class="list-group-item no-padding">
              <div class="row">
                <div class="summary-section col-xs-12 col-sm-6">
                  <div class="summary-box keys lookup-info">
                    <div>
                      Plate:
                    </div>
                    <div>
                      State:
                    </div>
                    <div>
                      Plate type:
                    </div>
                    <div>
                      Violations:
                    </div>
                    <div>
                      Lookups:
                    </div>
                  </div>
                  <div class="summary-box values lookup-info">
                    <div class="summary-value">
                      ABC1234
                    </div>
                    <div class="summary-value region">
                      <div class="region-abbreviation">
                        NY
                      </div>
                      <div class="region-full-name">
                        New York
                      </div>
                    </div>
                    <div class="summary-value">
                      All
                    </div>
                    <div class="summary-value">
                      3
                    </div>
                    <div class="summary-value">
                      2
                    </div>
                  </div>
                </div>
                <div class="summary-section col-xs-12 col-sm-6">
                  <div class="summary-box keys">
                    <div>
                      Fined:
                    </div>
                    <div>
                      Reduced:
                    </div>
                    <div class="fines-reduced">
                      Paid:
                    </div>
                    <div>
                      Owed:
                    </div>
                  </div>
                  <div class="summary-box values fines"
                       role="math"
                       aria-label="$3,850.00 fined - $3,780.00 paid - $20.00 reduced = $50.00 outstanding"
                  >
                    <div class="math-symbols">
                      <div>
                        &nbsp;&nbsp;&nbsp;
                      </div>
                      <div>
                        &nbsp;&nbsp;&nbsp;
                      </div>
                      <div class="fines-reduced">
                        –&nbsp;
                      </div>
                      <div>
                        &nbsp;&nbsp;&nbsp;
                      </div>
                    </div>
                    <div class="amounts">
                      <div>
                        $3,850.00
                      </div>
                      <div>
                        $20.00
                      </div>
                      <div class="fines-reduced">
                        $3,780.00
                      </div>
                      <div>
                        $50.00
                      </div>
                    </div>
                  </div>
                </div>
              </div>
            </li>
            <li class="list-group-item">
              <div class="violations-table-wrapper"
                   style="width: 100%;"
              >
                <div class="violations-table-header"
                     data-testid="vehicle-violations-controls"
                >
                  <div class="row">
                    <div class="d-grid gap-2 d-md-flex justify-content-md-between">
                      <button aria-controls="violations-table-e5f6g7h8"
                              aria-expanded="false"
                              class="btn btn-block w-100 btn-outline-primary"
                              type="button"
                      >
                        hide violations
                      </button>
                      <button class="btn btn-outline-primary btn-block w-100"
                              type="button"
                      >
                        show fines details
                      </button>
                      <button class="btn btn-outline-primary btn-block w-100"
                              type="button"
                      >
                        show violation summary
                      </button>
                    </div>
                  </div>
                </div>
                <div class="table-responsive violations-table-body-wrapper"
                     id="violations-table-e5f6g7h8"
                     data-testid="vehicle-violations-list"
                >
                  <table class="table table-striped table-sm violations-table">
                    <caption>
                      3 parking and camera violations
                    </caption>
                    <thead class="thead-light table-light">
                      <tr>
                        <th data-testid="table-header-date"
                            aria-sort="ascending"
                            class="sort-column"
                        >
                          <span>
                            Date
                          </span>
                          <svg aria-labelledby="svg-inline--fa-title-angle-up"
                               data-prefix="fas"
                               data-icon="angle-up"
                               class="svg-inline--fa fa-angle-up "
                               role="img"
                               xmlns="http://www.w3.org/2000/svg"
                               viewbox="0 0 448 512"
                          >
                            <title id="svg-inline--fa-title-angle-up">
                              angle-up icon
                            </title>
                            <path fill="currentColor"
                                  d="M201.4 137.4c12.5-12.5 32.8-12.5 45.3 0l160 160c12.5 12.5 12.5 32.8 0 45.3s-32.8 12.5-45.3 0L224 205.3 86.6 342.6c-12.5 12.5-32.8 12.5-45.3 0s-12.5-32.8 0-45.3l160-160z"
                            >
                            </path>
                          </svg>
                        </th>
                        <th data-testid="table-header-kind"
                            aria-sort="none"
                            class
                        >
                          <span>
                            Violation
                          </span>
                        </th>
                        <th data-testid="table-header-location"
                            aria-sort="none"
                            class
                        >
                          <span>
                            Location
                          </span>
                        </th>
                        <th data-testid="table-header-fined"
                            aria-sort="none"
                            class
                        >
                          <span>
                            Fines
                          </span>
                        </th>
                      </tr>
                    </thead>
                    <tbody data-testid="violations-table-body">
                      <tr class="sort-divider"
                          data-testid="sort-divider-date-ascending-2013"
                      >
                        <th colspan="1">
                          2013
                        </th>
                        <th colspan="1">
                        </th>
                        <th colspan="1">
                        </th>
                        <th colspan="1">
                        </th>
                      </tr>
                      <tr class="violation-row  no-fines-breakdown"
                          data-testid="summons 7310127606"
                      >
                        <td>
                          08/30/2013
                        </td>
                        <td class="violation-description">
                          <div class="humanized-description">
                            No Standing - Bus Stop
                          </div>
                        </td>
                        <td class="location">
                          <span class="borough">
                            Brooklyn
                          </span>
                          <span class="location-description">
                            (8002 3rd Ave)
                          </span>
                        </td>
                        <td class="fines">
                          N/A
                        </td>
                      </tr>
                      <tr class="violation-row  no-fines-breakdown"
                          data-testid="summons 7310127607"
                      >
                        <td>
                          08/30/2013
                        </td>
                        <td class="violation-description">
                          <div class="humanized-description">
                            No Standing - Bus Stop
                          </div>
                        </td>
                        <td class="location">
                          <span class="borough">
                            Brooklyn
                          </span>
                          <span class="location-description">
                            (8002 3rd Ave)
                          </span>
                        </td>
                        <td class="fines">
                          N/A
                        </td>
                      </tr>
                      <tr class="violation-row  no-fines-breakdown"
                          data-testid="summons 7310127608"
                      >
                        <td>
                          08/30/2013
                        </td>
                        <td class="violation-description">
                          <div class="humanized-description">
                            No Standing - Bus Stop
                          </div>
                        </td>
                        <td class="location">
                          <span class="borough">
                            Brooklyn
                          </span>
                          <span class="location-description">
                            (8002 3rd Ave)
                          </span>
                        </td>
                        <td class="fines">
                          N/A
                        </td>
                      </tr>
                    </tbody>
                  </table>
                </div>
              </div>
            </li>
          </ul>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Components/VehicleResults/Body ViolationsListVisibleWithDangerousVehicleAbatementAct smoke-test 1`] = `
<div class="container-fluid">
  <div class="row">
    <div class="col-md-12">
      <div class="vehicles">
        <div class="vehicle card">
          <ul class="list-group list-group-flush">
            <li class="list-group-item no-padding">
              <div class="row">
                <div class="summary-section col-xs-12 col-sm-6">
                  <div class="summary-box keys lookup-info">
                    <div>
                      Plate:
                    </div>
                    <div>
                      State:
                    </div>
                    <div>
                      Plate type:
                    </div>
                    <div>
                      Violations:
                    </div>
                    <div>
                      Lookups:
                    </div>
                  </div>
                  <div class="summary-box values lookup-info">
                    <div class="summary-value">
                      ABC1234
                    </div>
                    <div class="summary-value region">
                      <div class="region-abbreviation">
                        NY
                      </div>
                      <div class="region-full-name">
                        New York
                      </div>
                    </div>
                    <div class="summary-value">
                      All
                    </div>
                    <div class="summary-value">
                      3
                    </div>
                    <div class="summary-value">
                      2
                    </div>
                  </div>
                </div>
                <div class="summary-section col-xs-12 col-sm-6">
                  <div class="summary-box keys">
                    <div>
                      Fined:
                    </div>
                    <div>
                      Reduced:
                    </div>
                    <div class="fines-reduced">
                      Paid:
                    </div>
                    <div>
                      Owed:
                    </div>
                  </div>
                  <div class="summary-box values fines"
                       role="math"
                       aria-label="$3,850.00 fined - $3,780.00 paid - $20.00 reduced = $50.00 outstanding"
                  >
                    <div class="math-symbols">
                      <div>
                        &nbsp;&nbsp;&nbsp;
                      </div>
                      <div>
                        &nbsp;&nbsp;&nbsp;
                      </div>
                      <div class="fines-reduced">
                        –&nbsp;
                      </div>
                      <div>
                        &nbsp;&nbsp;&nbsp;
                      </div>
                    </div>
                    <div class="amounts">
                      <div>
                        $3,850.00
                      </div>
                      <div>
                        $20.00
                      </div>
                      <div class="fines-reduced">
                        $3,780.00
                      </div>
                      <div>
                        $50.00
                      </div>
                    </div>
                  </div>
                </div>
              </div>
            </li>
            <li class="list-group-item list-group-item-warning"
                data-testid="dangerous-vehicle-abatement-act-notice"
            >
              <p>
                Under the
                <a target="_blank"
                   rel="noopener noreferrer"
                   href="https://legistar.council.nyc.gov/LegislationDetail.aspx?ID=3521908&amp;GUID=A4FD4CFC-8AD8-4130-AA92-11BC56936F6D#:~:text=The%20bill%20will%20create%20a,Department%20of%20Transportation%20(DOT)."
                >
                  Dangerous Vehicle Abatement Act
                </a>
                &nbsp;this vehicle could have been booted or impounded for:
              </p>
              <ul>
                <li>
                  <span class="text-bg-warning">
                    <span class="dvaa-violations-count">
                      7
                    </span>
                    red light camera violations
                  </span>
                  <span>
                    &nbsp;(&gt;= 5/year) from 06/27/2023 to 05/06/2024
                  </span>
                </li>
              </ul>
            </li>
            <li class="list-group-item">
              <div class="violations-table-wrapper"
                   style="width: 100%;"
              >
                <div class="violations-table-header"
                     data-testid="vehicle-violations-controls"
                >
                  <div class="row">
                    <div class="d-grid gap-2 d-md-flex justify-content-md-between">
                      <button aria-controls="violations-table-e5f6g7h8"
                              aria-expanded="false"
                              class="btn btn-block w-100 btn-outline-primary"
                              type="button"
                      >
                        hide violations
                      </button>
                      <button class="btn btn-outline-primary btn-block w-100"
                              type="button"
                      >
                        show fines details
                      </button>
                      <button class="btn btn-outline-primary btn-block w-100"
                              type="button"
                      >
                        show violation summary
                      </button>
                    </div>
                  </div>
                </div>
                <div class="table-responsive violations-table-body-wrapper"
                     id="violations-table-e5f6g7h8"
                     data-testid="vehicle-violations-list"
                >
                  <table class="table table-striped table-sm violations-table">
                    <caption>
                      3 parking and camera violations
                    </caption>
                    <thead class="thead-light table-light">
                      <tr>
                        <th data-testid="table-header-date"
                            aria-sort="ascending"
                            class="sort-column"
                        >
                          <span>
                            Date
                          </span>
                          <svg aria-labelledby="svg-inline--fa-title-angle-up"
                               data-prefix="fas"
                               data-icon="angle-up"
                               class="svg-inline--fa fa-angle-up "
                               role="img"
                               xmlns="http://www.w3.org/2000/svg"
                               viewbox="0 0 448 512"
                          >
                            <title id="svg-inline--fa-title-angle-up">
                              angle-up icon
                            </title>
                            <path fill="currentColor"
                                  d="M201.4 137.4c12.5-12.5 32.8-12.5 45.3 0l160 160c12.5 12.5 12.5 32.8 0 45.3s-32.8 12.5-45.3 0L224 205.3 86.6 342.6c-12.5 12.5-32.8 12.5-45.3 0s-12.5-32.8 0-45.3l160-160z"
                            >
                            </path>
                          </svg>
                        </th>
                        <th data-testid="table-header-kind"
                            aria-sort="none"
                            class
                        >
                          <span>
                            Violation
                          </span>
                        </th>
                        <th data-testid="table-header-location"
                            aria-sort="none"
                            class
                        >
                          <span>
                            Location
                          </span>
                        </th>
                        <th data-testid="table-header-fined"
                            aria-sort="none"
                            class
                        >
                          <span>
                            Fines
                          </span>
                        </th>
                      </tr>
                    </thead>
                    <tbody data-testid="violations-table-body">
                      <tr class="sort-divider"
                          data-testid="sort-divider-date-ascending-2013"
                      >
                        <th colspan="1">
                          2013
                        </th>
                        <th colspan="1">
                        </th>
                        <th colspan="1">
                        </th>
                        <th colspan="1">
                        </th>
                      </tr>
                      <tr class="violation-row  no-fines-breakdown"
                          data-testid="summons 7310127603"
                      >
                        <td>
                          08/30/2013
                        </td>
                        <td class="violation-description">
                          <div class="humanized-description">
                            No Standing - Bus Stop
                          </div>
                        </td>
                        <td class="location">
                          <span class="borough">
                            Brooklyn
                          </span>
                          <span class="location-description">
                            (8002 3rd Ave)
                          </span>
                        </td>
                        <td class="fines">
                          N/A
                        </td>
                      </tr>
                      <tr class="violation-row  no-fines-breakdown"
                          data-testid="summons 7310127604"
                      >
                        <td>
                          08/30/2013
                        </td>
                        <td class="violation-description">
                          <div class="humanized-description">
                            No Standing - Bus Stop
                          </div>
                        </td>
                        <td class="location">
                          <span class="borough">
                            Brooklyn
                          </span>
                          <span class="location-description">
                            (8002 3rd Ave)
                          </span>
                        </td>
                        <td class="fines">
                          N/A
                        </td>
                      </tr>
                      <tr class="violation-row  no-fines-breakdown"
                          data-testid="summons 7310127605"
                      >
                        <td>
                          08/30/2013
                        </td>
                        <td class="violation-description">
                          <div class="humanized-description">
                            No Standing - Bus Stop
                          </div>
                        </td>
                        <td class="location">
                          <span class="borough">
                            Brooklyn
                          </span>
                          <span class="location-description">
                            (8002 3rd Ave)
                          </span>
                        </td>
                        <td class="fines">
                          N/A
                        </td>
                      </tr>
                    </tbody>
                  </table>
                </div>
              </div>
            </li>
          </ul>
        </div>
      </div>
    </div>
  </div>
</div>
`;
